--- a/app/src/app/components/add-ingredient/add-ingredient.dialog.html
+++ b/app/src/app/components/add-ingredient/add-ingredient.dialog.html
@@ -1,38 +1,40 @@
-<form class="grid grid-flow-row auto-rows-max gap-4" [formGroup]="form">
-  <div>
-    <h3 class="text-2xl px-1 text-center">{{data.ingredient ? 'Edit Ingredient' : 'Add Ingredient'}}</h3>
-  </div>
-  <div>
-    <input
-      id="name"
-      type="text"
-      placeholder="Ingredient Name"
-      formControlName="name" />
-  </div>
-  <div>
+<mat-dialog-content>
+  <form class="grid grid-flow-row auto-rows-max gap-4" [formGroup]="form">
+    <div>
+      <h3 class="text-2xl px-1 text-center">{{data.ingredient ? 'Edit Ingredient' : 'Add Ingredient'}}</h3>
+    </div>
+    <div>
+      <input
+        id="name"
+        type="text"
+        placeholder="Ingredient Name"
+        formControlName="name" />
+    </div>
+    <div>
     <textarea
       id="description"
       type="text"
       placeholder="Description"
       formControlName="description"></textarea>
-  </div>
-  <div class="flex flex-row justify-between items-center gap-4">
-    <input
-      id="cost"
-      type="decimal"
-      [inputMask]="currencyMask"
-      placeholder="$ 0.00"
-      formControlName="cost" />
-    <div>Per</div>
-    <select
-      id="defaultUnit"
-      matNativeControl
-      formControlName="defaultUnitId">
-      <option [value]="''">Select Default Unit...</option>
-      <option [ngValue]="unit.id" *ngFor="let unit of units">{{unit.name}} ({{unit.abbr}})</option>
-    </select>
-  </div>
-  <div>
-    <bm-button class="w-full" icon="bi-save" (bmClick)="saveIngredient()" [disabled]="form.invalid">Save</bm-button>
-  </div>
-</form>
+    </div>
+    <div class="flex flex-row justify-between items-center gap-4">
+      <input
+        id="cost"
+        type="decimal"
+        [inputMask]="currencyMask"
+        placeholder="$ 0.00"
+        formControlName="cost" />
+      <div>Per</div>
+      <select
+        id="defaultUnit"
+        matNativeControl
+        formControlName="defaultUnitId">
+        <option [value]="''">Select Default Unit...</option>
+        <option [ngValue]="unit.id" *ngFor="let unit of units">{{unit.name}} ({{unit.abbr}})</option>
+      </select>
+    </div>
+    <div>
+      <bm-button class="w-full" icon="bi-save" (bmClick)="saveIngredient()" [disabled]="form.invalid">Save</bm-button>
+    </div>
+  </form>
+</mat-dialog-content>
