--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -1,13 +1,14 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 // Plus imports for other components in your app.
 
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap');
+
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.all-component-typographies();
 @include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
@@ -26,7 +27,10 @@ $app-theme: mat.m2-define-light-theme((
     primary: $app-primary,
     accent: $app-accent,
     warn: $app-warn,
-  )
+  ),
+  typography: mat.m2-define-typography-config(
+    $font-family: "Fuzzy Bubbles",
+  ),
 ));
 
 // Include theme styles for core and each component used in your app.
@@ -39,8 +43,6 @@ $app-theme: mat.m2-define-light-theme((
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
-@import url('https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap');
 @layer components {
   input, select, textarea {
     @apply p-3 shadow-md rounded-md w-full;
@@ -106,7 +108,10 @@ table tbody tr td {
 }
 
 .custom-dialog-class {
-  mat-dialog-container {
-    @apply bm-gradient-background-alt bm-border-outline rounded-xl p-12;
+  .mat-mdc-dialog-container {
+    @apply bm-gradient-background-alt bm-border-outline rounded-xl p-6;
+  }
+  .mat-mdc-dialog-surface {
+    @apply border-0 bg-white bg-opacity-0 shadow-none;
   }
 }
