--- a/app/src/app/components/toolbar/toolbar.component.html
+++ b/app/src/app/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<header class="m-8 flex w-full flex-row items-center justify-end gap-4">
+<header class="mt-4 mx-8 flex w-full flex-row items-center justify-end gap-4">
   <div
     class="flex cursor-pointer rounded-full bg-bm-background_light p-3 text-center drop-shadow-sm hover:animate-slowspin">
     <i class="bi-gear-fill h-8 w-8 text-3xl"></i>
